🔧 Fix top z-index

--- a/src/components/BarbershopPage/BarbershopPage.module.scss
+++ b/src/components/BarbershopPage/BarbershopPage.module.scss
@@ -10,6 +10,7 @@
 }
 
 .top {
+  z-index: 1;
   width: 100%;
   position: fixed;
   top: 0;
